# cortex

./: .gitignore  __main__.py
api/: config_resolver.py  database.py  main.py  models.py  pulumi_deployments.py  settings.py  validation.py
api/routes/: deployments.py  webhooks.py
api/services/: addon_installer.py
automation/: __main__.py
docs/: clickhouse-system-log-bloat-fix.md  orphaned-ebs-volumes-guide.md
infra/: __init__.py  config.py  providers.py
monitoring/: README.md  monitoring-values.yaml
nginx/: nginx-values.yaml
prod/: test-deployments.sh
prod-automation/: .dockerignore  .env.example  DEPLOY.md  Dockerfile  Pulumi.heizenwork-dev.yaml  Pulumi.yaml  __main__.py  docker-compose.yml  pyproject.toml  requirements.txt
prod-automation/api/: auth_models.py  config_resolver.py  config_storage.py  database.py  dependencies.py  main.py  models.py  pulumi_deployments.py  pulumi_engine.py  settings.py  validation.py
prod-automation/api/routes/: auth.py  aws.py  cluster.py  configs.py  deployments.py  webhooks.py
prod-automation/api/services/: addon_installer.py  auth_service.py  cluster_teardown.py  destroy_manager.py  gitops_writer.py  ssm_access.py
prod-automation/infra/: config.py
prod-automation/infra/components/: access_node.py  eks.py  iam.py  kafka.py  mongodb_atlas.py
prod-automation/nginx/: nginx.conf
prod-automation/worker/: __init__.py  celery_app.py
scripts/: README.md  find-orphaned-falkordb-volumes.sh  find-orphaned-milvus-volumes.sh  node-pod-map.sh  provision-ddb-standalone.py  provision-dynamodb-tables.py
(+334 files in other folders)
